cmake_minimum_required(VERSION 3.17)
project(Exo_502)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exo_502 main.cpp Dinosaure.cpp Dinosaure.h Triceratops.cpp Triceratops.h Ichtyosaure.cpp Ichtyosaure.h Pterodactyle.cpp Pterodactyle.h Velociraptor.cpp Velociraptor.h Plesiosaure.cpp Plesiosaure.h GitTest.cpp GitTest.h)